// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestrictedFeature component should render alert with a link and an action 1`] = `
<div
  class="col mt-2"
>
  <div
    class="alert error my-3"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        This feature is only available for Pro and above plans.
      </span>
      <div
        class="customActions"
      >
        <a
          class="actionLink"
          to="/app/settings/billing/plans"
        >
          Upgrade here.
        </a>
      </div>
    </div>
  </div>
  <p>
    text
  </p>
  <div
    class="carouselContainer"
  >
    <div
      class="slick-slider slick-initialized"
    >
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <div
                class="carouselContent"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <a
                  href="url1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="carousel content"
                    src="url1"
                  />
                </a>
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="1"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <div
                class="carouselContent"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <a
                  href="url2"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="carousel content"
                    src="url2"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RestrictedFeature component should render image carousel and Lightbox 1`] = `
<div
  class="col mt-2"
>
  <div
    class="alert error my-3"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        This feature is only available for Pro and above plans.
      </span>
      <div
        class="customActions"
      >
        <a
          class="actionLink"
          to="#"
        />
      </div>
    </div>
  </div>
  <p>
    text
  </p>
  <div
    class="carouselContainer"
  >
    <div
      class="slick-slider slick-initialized"
    >
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <div
                class="carouselContent"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <a
                  href="url1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="carousel content"
                    src="url1"
                  />
                </a>
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="1"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <div
                class="carouselContent"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <a
                  href="url2"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="carousel content"
                    src="url2"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
